--- a/ds/packages/ui/src/styles/globals.css
+++ b/ds/packages/ui/src/styles/globals.css
@@ -13,6 +13,10 @@
     -moz-osx-font-smoothing: grayscale;
   }
 
+  .material-symbols-outlined {
+    font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
+  }
+
   code, pre {
     font-family: var(--lpd-font-mono), monospace;
   }
