--- a/ds/packages/ui/src/styles/globals.css
+++ b/ds/packages/ui/src/styles/globals.css
@@ -65,6 +65,11 @@
     background-image: linear-gradient(to right, var(--grid-line-color) 1px, transparent 1px), linear-gradient(to bottom, var(--grid-line-color) 1px, transparent 1px); 
   }
 
+  .bg-grid-20 { 
+    background-size: 20px 20px; 
+    background-image: linear-gradient(to right, var(--grid-line-color) 1px, transparent 1px), linear-gradient(to bottom, var(--grid-line-color) 1px, transparent 1px); 
+  }
+
   code, pre {
     font-family: var(--lpd-font-mono), monospace;
   }
